fix(contracts-piloted-section): version mobile

--- a/src/3_blocks/join-the-team-section/style.scss
+++ b/src/3_blocks/join-the-team-section/style.scss
@@ -2,7 +2,8 @@
   background-color: #d1e4f3;
   padding: var(--spacing-80) 109px;
   padding: var(--spacing-32);
-
+  width: 100%;
+  
   & > h3 {
     margin-bottom: var(--spacing-80);
     font-family: var(--font-family-heading);
@@ -12,12 +13,14 @@
     text-align: center;
     color: var(--color-neutral-0);
   }
-
+  
   &__offer-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-
+    max-width: 1040px;
+    margin: 0 auto;
+    
     &__offer-btn {
       width: 100%;
       display: flex;
